<resources>
    <string name="app_name">ASODESUNIDOS</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="text_view">Text View</string>
    <string name="n_mero_de_tel_fono">Número de Teléfono</string>
    <string name="salario">Salario</string>
    <string name="estado_civil">Estado Civil</string>
    <string name="uni_n_libre">Unión Libre</string>
    <string name="viudo_a">Viudo/a</string>
    <string name="divorciado_a">Divorciado/a</string>
    <string name="soltero_a">Soltero/a</string>
    <string name="casado_a">Casado/a</string>
    <string name="volver">Volver</string>
    <string name="guardar">Guardar</string>
    <string name="fecha_nacimiento">Fecha Nacimiento</string>
    <string name="calcular_cuota">Calcular Cuota</string>
    <string name="tipo_prestamo">Tipo de Préstamo</string>
    <string name="direccion">Dirección</string>
    <string name="interes">Tasa de Interés</string>
    <string name="plazo">Plazo en años</string>
    <string name="monto">Monto del Préstamo</string>
    <string name="limpiar">Limpiar</string>
    <string name="calcular">Calcular</string>
    <string name="cuota">Cuota Mensual</string>
    <string name="id">Id</string>
    <string name="pr_stamo">Préstamo</string>
    <string name="saldo">Saldo Restante</string>
    <string name="pago_mensual">Pago Mensual</string>
    <string name="pago_nextraordinario">Pago\nExtraordinario</string>
    <string name="si">Confirmar</string>
    <string name="no">Cancelar</string>
    <string name="ingrese_el_monto_del_pago">Ingrese el Monto del Pago</string>
    <string name="desea_realizar_un_npago_de_cuota_mensual">¿Desea realizar un\npago de cuota mensual?</string>
    <string name="title_activity_pantalla_administrativa">PantallaAdministrativa</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cedula">Cedula:</string>
    <string name="nombre">Nombre:</string>
    <string name="salario1">Salario:</string>
    <string name="buscar">Buscar</string>
    <string name="credito">Credito</string>
    <string name="plazo1">Plazo</string>
    <string name="tipo">Tipo</string>
    <string name="calcular1">Calcular</string>
    <string name="cuota1">Cuota</string>
    <string name="total">Total</string>
    <string name="interes1">Interes</string>
    <string name="asignar">Asignar</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="agregar_cliente">Agregar Cliente</string>
    <string name="asignar_prestamo">Asignar Prestamo</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="ver">Ver</string>
    <string name="saldo1">Saldo</string>
    <string name="monto1">Monto</string>
    <string name="marchamo">Marchamo</string>
    <string name="volver1">. . . . . . . . . . . . . .</string>
    <string name="_0">₡0</string>
    <string name="buttonAddmarchamo">+</string>
    <string name="extraordinario">Extraordinario</string>
    <string name="tv12">. . . . . . . . . . . . . .</string>
    <string name="_01">₡0</string>
    <string name="todo">TODO</string>
    <string name="gestiona_tus_ahorros_mensuales">Gestiona tus ahorros mensuales:</string>
    <string name="navide_o">Navideño</string>
    <string name="tv6">. . . . . . . . . . . . . .</string>
    <string name="_02">₡0</string>
    <string name="ver_mis_pr_stamos">Ver mis préstamos</string>
    <string name="gestionar_mis_ahorros">Gestionar mis ahorros</string>
    <string name="calcula_cuota">Calcula cuota</string>
    <string name="informaci_n_personal">Información personal</string>
    <string name="cerrar_cesi_n">Cerrar cesión</string>
    <string name="cedula1">Cedula:</string>
    <string name="nombre1">Nombre:</string>
    <string name="salario2">Salario:</string>
    <string name="fecha_de_nacimiento">Fecha De Nacimiento:</string>
    <string name="direccion1">Direccion:</string>
    <string name="estado_civil1">Estado Civil:</string>
    <string name="agregar">Agregar</string>
    <string name="informacion">INFORMACION:</string>
</resources>