<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".InformacionPersonal">

    <TextView
        android:id="@+id/cedulaTV"
        android:layout_width="144dp"
        android:layout_height="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/text_view"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/tvCivil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado_civil"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:backgroundTint="@color/text"
        android:ems="10"
        android:hint="@string/fecha_nacimiento"
        android:inputType="date"
        android:paddingVertical="5sp"
        android:textAlignment="viewStart"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:backgroundTint="@color/text"
        android:ems="10"
        android:hint="@string/n_mero_de_tel_fono"
        android:inputType="phone"
        android:paddingVertical="5sp"
        android:rotationY="-1"
        android:textAlignment="viewStart"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <RadioGroup
        android:id="@+id/rgCivil2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546">

        <RadioButton
            android:id="@+id/rbUnion"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/text"
            android:text="@string/uni_n_libre"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbViudo"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/text"
            android:text="@string/viudo_a"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbDivorciado"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/text"
            android:text="@string/divorciado_a"
            android:textColor="@color/text"
            android:textSize="16sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgCivil1"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472">

        <RadioButton
            android:id="@+id/rbSoltero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/text"
            android:text="@string/soltero_a"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbCasado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/text"
            android:text="@string/casado_a"
            android:textColor="@color/text"
            android:textSize="16sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/etSalario"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:backgroundTint="@color/text"
        android:ems="10"
        android:hint="@string/salario"
        android:inputType="number"
        android:paddingVertical="5sp"
        android:textAlignment="viewStart"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:backgroundTint="@color/text"
        android:ems="10"
        android:hint="@string/nombre_completo"
        android:inputType="textPersonName"
        android:paddingVertical="5sp"
        android:textAlignment="viewStart"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <EditText
        android:id="@+id/etDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/text"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Dirección "
        android:inputType="textMultiLine"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>