<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".PantallaPrincipalClienteActivity">


    <LinearLayout
        android:layout_width="261dp"
        android:layout_height="350dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="63dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        tools:ignore="MissingConstraints,TextSizeCheck">

        <Button
            android:id="@+id/buttonVerPrestamos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="verPrestamos"
            android:text="@string/ver_mis_pr_stamos"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonGestionarAhorros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="gestionarAhorros"
            android:text="@string/gestionar_mis_ahorros"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonCalculaCUota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="calculaCuota"
            android:text="@string/calcula_cuota"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonInformacionPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="infoPersonal"
            android:text="@string/informaci_n_personal"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttoLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="logOut"
            android:text="@string/cerrar_cesi_n"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="152dp"
        android:layout_marginTop="83dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>