<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Asignar_prestamos">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="357dp"
        android:layout_height="166dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cedula"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:text="@string/cedula"
                android:textColor="#f1c9a0"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/cedulaPrestamo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:backgroundTint="#f1c9a0"
                android:ems="10"
                android:inputType="number"
                android:textColor="#f1c9a0"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="#f1c9a0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nombrePrestamo"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="#194743"
                android:textColor="#f1c9a0"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/salario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salario1"
                android:textColor="#f1c9a0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/salarioPr"
                android:layout_width="216dp"
                android:layout_height="35dp"
                android:background="#194743"
                android:textColor="#f1c9a0"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/buscarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="20dp"
        android:onClick="buscarCliente"
        android:text="@string/buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:ignore="TextContrastCheck" />

    <TableLayout
        android:id="@+id/tablaPrestamo"
        android:layout_width="408dp"
        android:layout_height="212dp"
        android:layout_marginTop="68dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscarCliente">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="136dp"
                android:layout_height="match_parent"
                android:letterSpacing="0"
                android:text="@string/credito"
                android:textAlignment="center"
                android:textColor="#f1c9a0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="136dp"
                android:layout_height="match_parent"
                android:text="@string/plazo1"
                android:textAlignment="center"
                android:textColor="#f1c9a0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="136dp"
                android:layout_height="match_parent"
                android:text="@string/tipo"
                android:textAlignment="center"
                android:textColor="#f1c9a0"
                android:textSize="20sp"
                tools:ignore="VisualLintBounds" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50sp">

            <EditText
                android:id="@+id/creditoPr"
                android:layout_width="126dp"
                android:layout_height="match_parent"
                android:backgroundTint="#f1c9a0"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="#f1c9a0"
                android:textSize="20sp"
                tools:ignore="Autofill,LabelFor" />

            <Spinner
                android:id="@+id/plazoSp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/tipoSp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                tools:ignore="VisualLintBounds" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/calcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:onClick="calcular"
                android:text="@string/calcular1"
                tools:ignore="VisualLintBounds,VisualLintButtonSize" />
        </TableRow>

        <TableRow
            android:id="@+id/calculo1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuota1"
                android:textAlignment="center"
                android:textColor="#f1c9a0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textAlignment="center"
                android:textColor="#f1c9a0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interes1"
                android:textAlignment="center"
                android:textColor="#f1c9a0"
                android:textSize="20sp"
                tools:ignore="VisualLintBounds" />
        </TableRow>

        <TableRow
            android:id="@+id/calculo2"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/cuotaPr"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:background="#194743"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#f1c9a0"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/totalPr"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2sp"
                android:background="#194743"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#f1c9a0"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/interesPr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2sp"
                android:background="#194743"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#f1c9a0"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded,VisualLintBounds" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/asignar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="152dp"
        android:onClick="asignarPrestamo"
        android:text="@string/asignar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablaPrestamo" />

</androidx.constraintlayout.widget.ConstraintLayout>